<resources>
    <string name="app_name">Immunitee</string>
    <string name="welcome_immunitee">Welcome to</string>
    <string name="full_name">Full Name  (same as Identity card or passport)</string>
    <string name="full_name_passport">Full Name as per Passport</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id_number">ID Number</string>
    <string-array name="id_type">
        <item>None</item>
        <item>MyKad</item>
        <item>MyKid</item>
    </string-array>
    <string name="email">Email</string>
    <string name="date_birth">Date of Birth</string>
    <string name="birth_time">Birth Time</string>
    <string name="birth_place">Place of Birth</string>
    <string name="nationality">Nationality</string>
    <string name="email_address1">Email Address</string>
    <string name="email_address2">Email Address 2</string>
    <string name="retype_email">Retype your Email address to confirm</string>
    <string name="contact_number">Contact Number</string>
    <string name="passport_number">Passport Number</string>
    <string name="passport_expiry_date">Passport Expiry Date</string>
    <string name="gender">Gender</string>
    <string name="login">LOGIN</string>
    <string name="signup">Sign up</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="save_change">Save Changes</string>
    <string name="password">Password</string>
    <string name="retype_password">Re-type Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">New User? Sign Up!</string>
    <string name="submit">Submit</string>
    <string-array name="country">
        <item>Malaysia</item>
    </string-array>
    <string name="city">Town/City</string>
    <string name="state">Province/State</string>
    <string name="profile">Profiles</string>
    <string name="switch_profile">Switch Profile</string>
    <string name="personal_info">Personal Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setting">Settings</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="notification">Notification</string>
    <string name="view_private_key">View Private Key</string>
    <string name="my_qr_code">MY QR CODE</string>
    <string name="view_report">View Report</string>
    <string name="world_entries">World Entries</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string-array name="language">
        <item>English</item>
        <item>Malay</item>
    </string-array>
    <string name="logout">Logout</string>
    <string name="private_key">Private Key</string>
    <string name="upload_your_key">Upload Your Private Key Code</string>
    <string name="email_private_key">Email Private Key</string>
    <string name="existing_user">Existing User</string>
    <string name="new_user_signup">New User Sign Up</string>
    <string name="residential_address">Residential Address</string>
    <string name="alternate_id">Alternate ID</string>
    <string name="skip">Skip</string>
    <string name="create_pin_now">Create PIN now</string>
    <string name="create_pin">Create PINs</string>
    <string name="update_pin">Update PINs</string>
    <string name="enter_4_pin">Enter 4-Digits PIN</string>
    <string name="my_key">My Key</string>
    <string name="remove_dependent">Remove Dependent</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="ecode_validation">e-Code Validation</string>
    <string name="add_feedback">Add Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_title">Feedback Title</string>
    <string name="how_do_you_feel_immunitee">How do you feel about Immunitee?</string>
    <string name="select_topic_feedback">Select a related topic for your feedback</string>
    <string name="account_billing">Account &amp; Billing</string>
    <string name="profile_management">Profile Management</string>
    <string name="health_record">Health Records</string>
    <string name="others">Others</string>
    <string name="how_was_exp">How was your experience?</string>
    <string name="describe_your_exp">Describe your experience here...</string>
    <string name="upload_document_optional">Upload Document (Optional)</string>
    <string name="thanks_feedback">Thanks for your feedback!</string>
    <string name="your_feedback">Your feedback is so helpful for us to hear. We \nappreciate your assistance in making \nImmunitee better.</string>
    <string name="dont_have_faceid">I don’t have ID with me</string>
    <string name="we_need_to_verify">We need to verify your ID</string>
    <string name="we_need_to_verify_desc">We need to determine your information \ngiven is authentic and belongs to you.</string>
    <string name="face_id">Face ID</string>
    <string name="take_photo">Take photo</string>
    <string name="set_up_face_id">Set Up Face ID</string>
    <string name="sign_up_by_scan">Sign up by scanning your face.</string>
    <string name="get_started">Get Started</string>
    <string name="position_within_frame">Position your face within the frame</string>
    <string name="setup_complete">Setup Complete</string>
    <string name="dependent_profile">Dependent Profiles</string>
    <string name="principle_profile">Principle Profile</string>
    <string name="departure_verify">Departure Verification</string>
    <string name="splash_bottom_msg">Secured &#8226; Authentic &#8226; Privacy</string>
    <string name="splash_digital_auth">Digitally Authenticated and Secured \nHealth Passport</string>
    <string name="change_language_success">Language Changed Successfully</string>
    <string name="forget_pin"><u>Forget PIN</u></string>
    <string name="otp">OTP</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="login_failed">Login Failed!</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="account_opening">Account Opening In Progress</string>
    <string name="restore">Restore</string>
    <string name="restore_google_drive">Restore from Google Drive</string>
    <string name="consent_agree">Consent Agreement</string>
    <string name="do_agree_consent">Do you consent to Malaysia Airlines Berhad (MAS) to access to your Personal Details and clinical data</string>
    <string name="send_my_key">Send MyKey</string>
    <string name="scan_ecode">Scan eCode</string>
    <string name="enter_ecode_screen">Enter the eCode shown at your check-in screen.</string>
    <string name="enter_ecode">Enter eCode</string>
    <string name="cancel">Cancel</string>
    <string name="sure_remove_dependent">Are you sure want to remove Dependent?</string>
    <string name="remove">Remove</string>
    <string name="dependent_added">Dependent Added!</string>
    <string name="you_can_now_manage_dependent">You can now manage your dependent account.</string>
    <string name="close">Close</string>
    <string name="thank_you_signup">WELCOME TO IMMUNITEE</string>
    <string name="immunitee_welcome_content">Immunite is a trusted platform for Digital Health Passport. Your clinical data is kept at secured blockchain with unique private key that only owned by you. Your clinical data will only be shared with your consent.</string>
    <string name="immunisation_history">Immunisation History</string>
    <string name="specimen">Specimen</string>
    <string name="specimen_name">Specimen Name</string>
    <string name="manufacture_brand">Manufacturer / Brand</string>
    <string name="date_sample">Date Sample Collected</string>
    <string name="time_sample">Time Sample Collected</string>
    <string name="test_code">Test Code</string>
    <string name="observation">Observation</string>
    <string name="status_fina">Status Finalize</string>
    <string name="performer">Performer</string>
    <string name="medical_officer">Medical Officer / Administrator Name</string>
    <string name="qualification">Qualification</string>
    <string name="qualification_issuer_name">Qualification Issuer Name</string>
    <string name="work_addres">Work Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city_town">City / Town</string>
    <string name="state_province">State / Province</string>
    <string name="zip_postcode">Zip / Postcode</string>
    <string name="upload_document">Upload Document</string>
    <string name="file_size_limit">File size limit (5MB) File formats (pdf, png, jpg)</string>
    <string name="additional_docs">Add Additional Documents</string>
    <string name="prinicipal_info">Principle Info</string>
    <string name="edit">Edit</string>
    <string name="dependent_info">Dependent Info</string>
    <string name="new_member">New Member</string>
    <string name="existing_member">Existing Member</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="clear_all">Clear All</string>
    <string name="apply">Apply</string>
    <string name="create_security_pin">Create Security PIN</string>
    <string name="activation_code">Activation Code</string>
    <string name="choose_plan">Choose Your Plan</string>
    <string name="subscribe">SubScribe</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="subscribe_private_key">Subscribe to get your Private Key</string>
    <string name="approve_account">You will be charges for the plan after the admin approves your account.</string>
    <string name="no_world_entry">No World Entry Setup! \nAdd your favourite World \nEntry Destination by \nclicking “+”  sign.</string>
    <string name="privacy">Privacy</string>
    <string name="account_restored">Account Restored</string>
    <string name="congratulation_restored">Congratulations!\nYou Account has been \nRestored Successfully!</string>
    <string name="your_account_restored">Your account has been restored, we recommend you to setup a security PIN to keep your personal data stored with Immunitee app protected against unauthorised access!</string>
    <string name="skip_underline"><u>Skip</u></string>
    <string name="invalid_private_key">Invalid Private Key</string>
    <string name="sorry">Sorry!</string>
    <string name="you_have_enter_invalid_pk">You have enter an invalid Private Key! \nWe are unable to restore your account. Please contact our helpdesk center at \n<b>+60 113 545 3139</b> \nif you need further assistant.</string>
    <string name="contact_immunite_helpdesk">Contact Immunitee Helpdesk</string>
    <string name="lab_result_history">Lab Result History</string>
    <string name="immunization_detail">Immunization Detail</string>
    <string name="vaccine_code">Vaccine Code</string>
    <string name="vaccine_date_time">Vaccinated Date and Time</string>
    <string name="vaccine_location">Vaccinated Location</string>
    <string name="manufacture_type">Manufacturer Type</string>
    <string name="manufacture_contact">Manufacturer Contact No</string>
    <string name="manufacture_address">Manufacturer Address</string>
    <string name="lot_no">Lot No</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="gs1_code">Gs1 Code</string>
    <string name="serial_no">Serial No</string>
    <string name="performer_name">Performer Name</string>
    <string name="performer_qualification_id">Performer Qualification ID</string>
    <string name="performer_qualification_issuer">Performer Qualification Issuer</string>
    <string name="security_pin">Security Pin</string>
    <string name="thank_you_sign">Thank you for signing \n up with IMMUNITEE!</string>
</resources>