<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home_unselected"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/notifications_unselected"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/world_entries"
        android:title="@string/world_entries"
        android:icon="@drawable/world_entries_icon"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@drawable/settings_unselected"
        app:showAsAction="ifRoom"/>

</menu>