<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_sign"
            android:textAppearance="@style/opens_bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/immunitee_welcome_content"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textAppearance="@style/opens_regular"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAppearance="@style/opens_bold"
            android:background="@drawable/button_red"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</layout>