<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/lite_yellow"
        tools:context=".SuccessAccountRestoredActivity">

        <RelativeLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:orientation="horizontal"
            android:background="@color/primary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_restored"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:textAppearance="@style/opens_bold" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/complete"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/congratulation_restored"
                    android:textAppearance="@style/opens_bold"
                    android:textSize="23sp"
                    android:textColor="@color/primary"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textAppearance="@style/opens_regular"
                    android:text="@string/your_account_restored"
                    android:layout_marginTop="10dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_pin_now"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textAppearance="@style/opens_bold"
                    android:background="@drawable/button_red"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/txt_skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skip_underline"
                    android:textSize="16sp"
                    android:textAppearance="@style/opens_bold"
                    android:textColor="@color/blue"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>